--- a/MobileRepository/event_management/pubspec.yaml
+++ b/MobileRepository/event_management/pubspec.yaml
@@ -28,13 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  collection: ^1.16.0
+  community_material_icon: ^5.9.55
   cupertino_icons: ^1.0.2
   dio: ^5.1.0
   flutter:
     sdk: flutter
   get_it: ^7.2.0
+  intl: ^0.18.0
+  progress_dialog:
+    git:
+      url: https://github.com/Rishan99/progress-dialog
+      ref: main
   provider: ^6.0.5
   shared_preferences: ^2.0.20
+  timeago: ^3.4.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -50,9 +58,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
